style/main.css
/* Site Reset */
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

@font-face {
    font-family: "Netflix Sans";
    src: url(../fonts/NetflixSans-Light.otf) format('opentype'); 
    font-weight: lighter;
}

 @font-face {
    font-family: "Netflix Sans";
    src: url(../fonts/NetflixSans-Regular.otf) format('opentype');
}
@font-face {
    font-family: "Netflix Sans";
    src: url(../fonts/NetflixSans-Medium.otf) format('opentype');
    font-weight: bold;
}
/*
@font-face {
    font-family: "Netflix Sans";
    src: url(../fonts/NetflixSans-Bold.otf) format('opentype');
    font-weight: bolder;
} */

body{
    font-family: 'Netflix Sans',sans-serif;
    background-color: black;
    color: white;
}

:root{
    --mainAccent: #E50914;
}

nav{
    display: flex;
    justify-content: space-between;
    max-width: 1800px;

    width: 100vw;
    padding: 1.8rem 2.9rem;
    position: absolute;
    top: 0;
    left: 50%;
    translate: -50%;
}

    .netflix-logo{
        fill: var(--mainAccent);
        max-width: 150px;

        height:3.25rem;
        width:9.375rem;
    }

     .language-sel{
        background-color: transparent;
        border: 1px solid white;
        color: white;
        padding: .8em 2rem;
        margin: 0 1rem;
        border-radius: .2vw;
        font-weight: 2rem;
    }
 
    .language-sel option::after{
        content: "alaaaaaa";
        font-size: 1rem;
        position:absolute;
    }

    .language-sel option{
        color: black;
    }
    nav .right-nav .nav-cta{
        padding: .8em 2rem;
        border-radius: .2vw;
    }

main{
    display: grid;
    grid-template-columns: 1fr min(1200px,100% )1fr;
    grid-auto-rows: min-content;
}

main > * {
    grid-column: 2;
}

.fullbleed{
    width: 100%;
    grid-column: 1 / 4;
}
.heading{
    font-size: 3.2rem;
    margin: .3em 0;
}
#title{
    background: url('../media/image/bgtitle.jpg'),linear-gradient(180deg, rgba(0, 0, 0, 0.894) 0%, rgba(0, 0, 0, 0.488) 30%,rgba(0, 0, 0, 0.431) 50%,rgba(0, 0, 0, 0.534) 60%, rgba(0, 0, 0, 0.825));
    background-size: cover;
    background-blend-mode: multiply;
    height: min(100vh, 800px);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    text-align: center;
}

    .main-title{
        font-size: 3rem;
        line-height: 100%;
    }

    .sub-title{
        font-size: 1.6rem;
        font-weight: 400;
        margin: 1rem 0;
     }
    
     .paragraph{
        font-size: 1.1rem;
     }


     .action.subscribe{
        display: flex;
        /* background-color: red; */
        width: min(50vw, 600px);
        height: 3.2rem;
        margin: 1em;

        position: relative;
     }
     .action.subscribe input{
        width: 70%;
        padding: .2em 10px;
        padding-top: .8em;
        font-size: .9rem;
     }
     .action.subscribe input:focus{
        cursor: text;
        outline: .01vh solid rgb(25, 86, 255);
     }
     .action.subscribe input:focus + label, .action.subscribe input:not(:placeholder-shown) + label{
        top: 10%;
        left: 2%;

        font-size: .7rem;
     }

     .action.subscribe label{
        position: absolute;
        top: 29%;
        left: 10px;
        color: grey;
        font-weight: 400;
        font-size: 1rem;
        user-select: none;
        pointer-events: none;
        transition: all 150ms ease;

     }

     
     .action.subscribe .cta{
        width: 30%; 
        font-size: 1.1rem;
        white-space: nowrap;
     }
      
     .action.subscribe .cta:active{
        outline: 3px solid rgb(118, 1, 1);
     }



     .btn{
        background-color: var(--mainAccent);
        color: white;
        font-family: 'Netflix Sans',sans-serif;
        border: none;
        cursor: pointer;
     }


.grid-half{
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.section-border{
    border-bottom: 6px solid #222222;
    height: 4px;
    width: 100%;
}

.grid-half .image-part img{
    max-width: 100%;
    max-height: 100%;
}


#feature .text-part{
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 0rem 4rem;
}

#feature{
    grid-template-columns: 60% 1fr;
    margin: 4rem 0;
    align-content: center;
}

.text-part .paragraph{
    font-size: 1.5rem;
    max-width: 35ch;
}


.image-part.video {position: relative;}
.image-part.video video{
    position: absolute;
    left: 12%;
    transform: translateY(min(12vh, 50px));
    z-index: -100;
    object-fit: cover;
    max-width: 80%;
    max-height: 100%;
}
.image-part.video image{
    position: relative;
    min-width: 100%;
    margin: 0 auto;
    object-fit: cover;
    width: 100%;
    height: 100%;
}


#feature-offline{
    grid-template-columns: 40% 1fr;
    margin: 8rem 0 0 0;
}

#feature-offline .text-part{
    margin: 0 4rem 0 auto;
    max-width: 80%;
}

    #feature-offline .image-part img{
        max-width: 90%;
        max-height: 90%;
        margin: 0 0 0 auto;
    }

    #multi .image-part.video video{
        position: absolute;
        left: 18%;
        transform: translateY(min(9vh, 30px));
        z-index: -100;
        object-fit: cover;
        max-width: 64%;
        max-height: 100%;
    }

#multi{
    margin: 4rem 3em;
}

    #multi .text-part{
        display: flex;
        flex-direction: column;
        justify-content: center;
    }



#kid{
    margin: 5rem 1rem;
}

    #kid .image-part{
        display: flex;
        justify-content: center;
        align-items: center;
    }

        #kid .image-part img{
            max-width: 80%;
        }

    #kid .text-part{
        display: flex;
        flex-direction: column;
        justify-content: center;
    }


#faq .text-part{
    text-align: center;
    margin: 4rem;
}


.questions{
    width:min(800px,80%);
    margin: 0 auto;
}

.questions .paragraph{
    font-size: 1.6rem;
}
.questions .question{
    margin: 1em 0;
}
.question{
    background-color: #303030;
}

    .question .a{
        max-height: 0px;
        overflow: hidden;
        transition: all 250ms ease;

    }
    .question .a .paragraph{
        margin-bottom: 1.5rem;
        font-size: 1.4rem;

    }
    .question .q{
        padding: 1.3rem 2rem;
        display: flex;
        justify-content: space-between;
        cursor: pointer;
        align-items: center;
    }

    .question .q-open{
        display: none;
    }
    .question .q-close{
        display: block;
    }
    .question.opened .q-open{
        display: block;
    }
    .question.opened .q-close{
        display: none;
    }
    .question.opened .q{
        overflow: hidden;
        border-bottom: 2px solid #222222;
    }
    .question.opened .a{
        padding: 2rem;
        max-height: 700px;
        transition: height 450ms ease;
    }
    .question i{
        font-size: 2rem;
    }



#faq .letter{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    scale: 1.2;
    margin: 4em 0;
}
    #faq .letter .paragraph{
        font-size: .9rem;
    }


footer{
    margin: 4em 9rem;
}
    footer .paragraph, footer a{
        color: #737373;
        font-size: 1rem;
    }

    footer a{
        white-space: nowrap;
        text-decoration: none;
    }
    footer a:hover{
        text-decoration: underline;
    }

    footer .footer-grid{
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        margin: 2rem 0;
    }
    footer .footer-col a{
        font-size: .8rem;
    }
    footer .footer-grid .footer-col{
        display: flex;
        flex-direction: column;
        gap: 1em;
    }

    footer .language-sel{
        border: 2px solid #737373;
        margin: 0;
        color: #737373;
    }

    footer .sitename{
        font-size: .8rem;
        margin: 1em 0;
    }


@media screen and (max-width:950px){
    .grid-half{
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    section .text-part {
        text-align: center;
    }

    section .text-part .heading{
        font-size: 2.5rem;
    }
    section .text-part .paragraph{
        font-size: 1.4rem;
        max-width: 40ch;
    }

    .grid-half.r{
        flex-direction: column-reverse;
    }


    #feature-offline{
        margin: 0;
        padding: 0;
    }

        #feature-offline .text-part{
            margin: 3rem 0;
        }

        .text-part .paragraph{
            margin: 0 auto;
        }

    #feature-offline .image-part img{
        max-width: 100%;
        margin: 0;
    }
    #feature-offline .image-part{
        display: flex;
        align-items: center;
        justify-content: center;
    }

    
    footer{
        margin: 2em 2rem;
    }

    .action.subscribe{
        width: 100%;
        flex-direction: column;
        align-items: center;
        gap: 1em;
    }

    .action.subscribe input{
        min-height: 3rem;
        display: block;
    }

  
    .action.subscribe input:focus + label, .action.subscribe input:not(:placeholder-shown) + label{
        top: 10%;
        left: 16.5%;

        font-size: .7rem;
     }

     .action.subscribe label{
        position: absolute;
        top: 29%;
        left: 18%;

     }

     .action.subscribe .cta{
        padding: .5rem 1rem;
        font-size: 1rem;
     }

}

@media screen and (max-width:550px){
    
    footer .footer-grid{
        grid-template-columns: 1fr 1fr;
    }
    

    .questions{
        width: 100%;
    }

    .questions .q .paragraph, .questions i{
        font-size: 1.2rem;
    }
    .question .a .paragraph{
        font-size: 1.1rem;
    }
    #faq .heading{
        font-size: 2.4rem;
    }

    .action.subscribe input{
        width: 95%;
    }

    .action.subscribe input:focus + label, .action.subscribe input:not(:placeholder-shown) + label{
        top: 10%;
        left: 4%;

        font-size: .7rem;
     }

     .action.subscribe label{
        position: absolute;
        top: 29%;
        left: 5%;

     }

     #faq .letter{
        scale: 1;
     }

     #faq .letter .paragraph{
        text-align: center;
        max-width: 80%;
     }
}

